tests/src/frontend/syntax/invalid/typespec_on_non_bind_lvalue.sk
fun main(): String {
  x = "Pass\n";
  !x : String = "Fail";
  x
}
